test/CheckError/Conditional/NonBoolCondition.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass(int value) {
	static create = default;
}

export int main(unused int argc, unused ubyte ** argv) {
	// CHECK: .loci:10:2: error: Can't implicitly cast value of type 'TestClass' to type 'bool_t'.
	if (TestClass(10)) {
		// ...
	}
	return 0;
}

// CHECK: 1 error generated.
